src/general_domain/api_gateway/ingress-general.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-generel
  annotations:
    kubernetes.io/ingress.class: kong
    # For ACL plugin
    #konghq.com/plugins: app-jwt
    #konghq.com/strip-path: "false"
spec:
  rules:
    - http:
        paths:
          - path: /v1/cs/info/search
            pathType: Prefix
            backend:
              service:
                name: cs-search
                port:
                  number: 80
          - path: /v1/cs/info/manage
            pathType: Prefix
            backend:
              service:
                name: cs-input-deploy
                port:
                  number: 80
          - path: /v1/cs/offline
            pathType: Prefix
            backend:
              service:
                name: cs-offline-play
                port:
                  number: 80
          - path: /v1/cs/live
            pathType: Prefix
            backend:
              service:
                name: cs-live-play
                port:
                  number: 80
